# napi.py

./: .envrc  .gitignore  .travis.yml  Makefile  README.md  ci_publish.sh  mypy.ini  napiprojekt.py  pyproject.toml  setup.py  test.py  tox.ini
.github/workflows/: main.yml
napi/: __init__.py  api.py  encoding.py  hash.py  main.py  napi.py  read_7z.py  store_subs.py
test/: test.py  test_acceptance.py  test_acceptance_cli.py  test_acceptance_lib.py  test_encoding.py  test_sub_dl_and_conversion.py
test/acceptance/: test_acceptance_cli.py  test_acceptance_lib.py
test/resources/: DunkirkSubtitles.7zip
test/unit/: test_sub_dl_and_conversion.py
